--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
     <title>Custom HTML5 Video Player</title>
     <link rel="stylesheet" type="text/css" href="normalize.css">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="iconfont.css">
 </head>
 
 <body>
     <div id="container">
         <div id="video_container">
-            <video preload poster="" src="http://vpls.cdn.videojj.com/scene/movie/game/game04.mp4"></video>
+            <video preload poster="" src=""></video>
             <div id="videoControls" class="player_control">
-                <div id="play" class="player_control_play player_control_iconfont"></div>
+                <div id="play" class="player_control_play player_control_iconfont">&#xe6a4;</div>
                 <div id="progressText" class="play_control_pregressText">00:00</div>
                 <div id="progress" class="player_control_progress">
                     <div id="progress_box" class="player_control_click"></div>
@@ -24,11 +23,11 @@
                     <div id="progress_line_time" class="player_control_hover_time">00:00</div>
                 </div>
                 <div id="videoVolumn" class="video_volumn">
-                    <div class="video_volumn_head player_control_iconfont"></div>
+                    <div class="video_volumn_head player_control_iconfont player_control_iconfont_volumn">&#xe632;</div>
                     <span class="video_volumn_box"></span>
                     <span class="video_volumn_total"><span class="video_volumn_volume"></span></span>
                 </div>
-                <div id="fullScreen" title="FullScreen Toggle" class="player_control_fullscreen player_control_iconfont"></div>
+                <div id="fullScreen" title="全屏" class="player_control_fullscreen player_control_iconfont">&#xe778;</div>
                 <a href="javascript:;" class="player_control_logo" target="_blank" style="color:#fff;font-size:24px;">
                     <i class="icon-youtube2"></i>
                 </a>
